<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/title_activity_Settings"
        android:icon="@mipmap/ic_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_help"
        android:title="@string/title_activity_help"
        android:icon="@mipmap/ic_help"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_record"
        android:title="@string/title_activity_record"
        android:icon="@mipmap/ic_home"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_user_profile"
        android:title="@string/title_activity_user_profile"
        android:icon="@mipmap/ic_profile"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_my_locations"
        android:title="@string/title_activity_my_locations"
        android:icon="@mipmap/ic_map"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_record_history"
        android:title="@string/title_activity_record_history"
        android:icon="@mipmap/ic_history"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

</menu>
