
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/showProfile_grid"
        android:layout_weight="1">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/editProfileBT"
            android:background="@drawable/custom_button"
            android:layout_gravity="right"
            android:textAllCaps="false"
            android:layout_marginRight="10dp"


            />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/deleteProfileBT"
            android:background="@mipmap/ic_delete"
            android:textAllCaps="false"/>

    </GridLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/showProfile_grid"
        android:layout_weight="1">
    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_profile"
        android:id="@+id/user_image"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_style"
        android:text="@string/name"
        android:id="@+id/show_nameTF"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_style"
        android:text="@string/phone"
        android:id="@+id/show_phonTF"
      />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_style"
        android:text="@string/mail"
        android:id="@+id/show_mailTF"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_style"
        android:text="@string/description"
        android:id="@+id/show_descriptionTF"
        />
        </LinearLayout>
</LinearLayout>
</ScrollView>
